# context-graph

./: .env.example  README.md  docker-compose.yml  gta.md  prompt.md
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: agent.py  config.py  gds_client.py  main.py
backend/app/agents/: README.md  __init__.py  base.py  bedrock.md  bedrock.py  claude.py  factory.py  tools.py
backend/scripts/: init_schema.py
frontend/: .dockerignore  Dockerfile  entrypoint.sh  next.config.js
frontend/lib/: api.ts
